make text center aligned BUG: li not aligned

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    text-align: center;
+}
+
 #checkList {
     list-style: none;
     margin-left: 0;
